Fixed lost password form button not showing properely, also fixed confirmation message for lost password controller not appearing in the form

--- a/src/main/resources/static/css/resetPassword.css
+++ b/src/main/resources/static/css/resetPassword.css
@@ -60,6 +60,13 @@ p.error-message {
     font-size: 14px;
 }
 
+p.message {
+    color: blue;
+    font-weight: bold;
+    text-align: left;
+    font-size: 14px;
+}
+
 .buttons {
     display: flex;
     flex-direction: row;
